[tool.poetry]
name = "fastapi-dropbox-service"
version = "0.1.0"
description = ""
authors = ["dheereshagrwal <da11@iitbbs.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
redis = "^5.0.8"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
